# wargaming-job-interview

./: CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Windows.yml
dependencies/imgui/: CMakeLists.txt
dependencies/rlimgui/: CMakeLists.txt
src/: err_logger.cpp  err_logger.hpp  main.cpp  menu.cpp  menu.hpp  objects.cpp  objects.hpp  properties.cpp  properties.hpp  validators.cpp  validators.hpp  view.cpp  view.hpp  window.cpp  window.hpp
test_data/: components.json
